# fpv-bridge

./: .gitignore  COVERAGE_IMPROVEMENT_PLAN.md  Cargo.toml  LICENSE  README.md  tarpaulin.toml
.github/workflows/: test.yml
config/: default.toml
docs/: ARCHITECTURE.md  BUILDING.md  BUTTON_MAPPING.md  CONFIGURATION.md  CRSF_PROTOCOL.md  HARDWARE_SETUP.md  REQUIREMENTS.md  TELEMETRY.md  TROUBLESHOOTING.md
src/: config.rs  error.rs  lib.rs  main.rs
src/controller/: calibration.rs  channel_mapper.rs  mapper.rs  mod.rs  ps5.rs
src/crsf/: crc.rs  decoder.rs  encoder.rs  mod.rs  protocol.rs
src/serial/: mod.rs  port_trait.rs
src/telemetry/: mod.rs
